k3d/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-gs-ping
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-gs-ping
                port:
                  name: http
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: docker-gs-ping
                port:
                  name: http-metrics
